include_ver_2_beta_2/freetype.h

  
  typedef unsigned char  FT_Byte;
  typedef char  FT_String;
  typedef signed short  FT_Short;
  typedef unsigned short  FT_UShort;
  typedef int  FT_Int;
  typedef unsigned int  FT_UInt;
  typedef signed long  FT_Long;
  typedef unsigned long  FT_ULong;
  typedef signed short  FT_F2Dot14;
  typedef signed long  FT_F26Dot6;
  typedef signed long  FT_Fixed;
  typedef int  FT_Error;
  typedef struct  FT_UnitVector_
  {
    FT_F2Dot14  x;
    FT_F2Dot14  y;
  } FT_UnitVector;
  typedef struct  FT_Matrix_
  {
    FT_Fixed  xx, xy;
    FT_Fixed  yx, yy;
  } FT_Matrix;
  typedef struct  FT_BBox_
  {
    FT_Pos  xMin, yMin;
    FT_Pos  xMax, yMax;
  } FT_BBox;
  typedef struct FT_ListNodeRec_*  FT_ListNode;
  typedef struct  FT_ListNodeRec_
  {
    FT_ListNode  prev;
    FT_ListNode  next;
    void*        data;
  } FT_ListNodeRec;
  typedef struct  FT_ListRec_
  {
    FT_ListNode  head;
    FT_ListNode  tail;
  } FT_ListRec;
  typedef struct  FT_Glyph_Metrics_
  {
    FT_Pos  width;         
    FT_Pos  height;        
    FT_Pos  horiBearingX;  
    FT_Pos  horiBearingY;  
    FT_Pos  horiAdvance;   
    FT_Pos  vertBearingX;  
    FT_Pos  vertBearingY;  
    FT_Pos  vertAdvance;   
  } FT_Glyph_Metrics;
  typedef void  (*FT_Generic_Finalizer)(void*  object);
  typedef struct  FT_Generic_
  {
    void*                 data;
    FT_Generic_Finalizer  finalizer;
  } FT_Generic;
  typedef struct  FT_Bitmap_Size_
  {
    FT_Short  height;
    FT_Short  width;
  } FT_Bitmap_Size;
  typedef struct FT_LibraryRec_  *FT_Library;
  typedef struct FT_DriverRec_*  FT_Driver;
  typedef struct FT_FaceRec_*  FT_Face;
  typedef struct FT_SizeRec_*  FT_Size;
  typedef struct FT_GlyphSlotRec_*  FT_GlyphSlot;
  typedef struct FT_CharMapRec_*  FT_CharMap;
  typedef enum  FT_Encoding_
  {
    ft_encoding_none    = 0,
    ft_encoding_symbol  = 0,
    ft_encoding_unicode = FT_MAKE_TAG('u','n','i','c'),
    ft_encoding_latin_2 = FT_MAKE_TAG('l','a','t','2'),
    ft_encoding_sjis    = FT_MAKE_TAG('s','j','i','s'),
    ft_encoding_big5    = FT_MAKE_TAG('b','i','g','5'),
    ft_encoding_adobe_standard = FT_MAKE_TAG('a','d','o','b'),
    ft_encoding_adobe_expert   = FT_MAKE_TAG('a','d','b','e'),    
    ft_encoding_apple_roman    = FT_MAKE_TAG('a','r','m','n')
  } FT_Encoding;
  typedef struct  FT_CharMapRec_
  {
    FT_Face      face;
    FT_Encoding  encoding;
    FT_UShort    platform_id;
    FT_UShort    encoding_id;
  } FT_CharMapRec;
  typedef struct  FT_FaceRec_
  {
    FT_Driver        driver;
    FT_Memory        memory;
    FT_Stream        stream;
    FT_Long          num_faces;
    FT_Long          face_index;
    FT_Generic       generic;
    FT_GlyphSlot     glyph;
    FT_Size          size;
    FT_CharMap       charmap;
    FT_Int           num_charmaps;
    FT_CharMap*      charmaps;
    FT_ListRec       sizes_list;
    void*            extensions;
    FT_Long          face_flags;
    FT_Long          style_flags;
    FT_Long          num_glyphs;
    FT_String*       family_name;
    FT_String*       style_name;
    FT_Int           num_fixed_sizes;
    FT_Bitmap_Size*  available_sizes;
    FT_BBox          bbox;
    FT_UShort        units_per_EM;
    FT_Short         ascender;
    FT_Short         descender;
    FT_Short         height;
    FT_Short         max_advance_width;
    FT_Short         max_advance_height;
    FT_Short         underline_position;
    FT_Short         underline_thickness;
    FT_UShort        max_points;
    FT_Short         max_contours;
  } FT_FaceRec;
  typedef struct  FT_Size_Metrics_
  {
    FT_UShort   x_ppem;        
    FT_UShort   y_ppem;        
    FT_Fixed    x_scale;       
    FT_Fixed    y_scale;       
    FT_Pos      ascender;      
    FT_Pos      descender;     
    FT_Pos      height;        
    FT_Pos      max_advance;   
  } FT_Size_Metrics;
  typedef struct  FT_SizeRec_
  {
    FT_Face          face;      
    FT_Generic       generic;   
    FT_Size_Metrics  metrics;   
  } FT_SizeRec;
  typedef struct FT_SubGlyph_  FT_SubGlyph;
  struct FT_SubGlyph_
  {
    FT_Int        index;
    FT_Byte*      control_data;
    FT_Int        control_len;
    FT_UShort     flags;
    FT_Int        arg1;
    FT_Int        arg2;
    FT_Matrix     transform;
    FT_SubGlyph*  parent;
  };
  typedef struct  FT_GlyphSlotRec_
  {
    FT_Face           face;
    FT_GlyphSlot      next;
    FT_Glyph_Metrics  metrics;
    FT_Glyph_Metrics  metrics2;
    FT_Glyph_Tag      format;
    FT_Bitmap         bitmap;
    FT_Outline        outline;
    FT_Int            num_subglyphs;
    FT_Int            max_subglyphs;
    FT_SubGlyph*      subglyphs;
    void*             control_data;
    void*             control_len;
    void*             other;
  } FT_GlyphSlotRec;
  EXPORT_DEF
  FT_Error  FT_Set_Raster( FT_Library            library,
                           FT_Raster_Interface*  interface,
                           FT_Raster             raster );