lib/src/generated_bindings2.dart


/// <Struct>
/// FT_Raster_Interface
///
/// <Description>
/// A structure used to model the default raster interface. A raster
/// is a module in charge of converting a glyph image into a bitmap.
///
/// <Fields>
/// size      :: the size in bytes of the given raster object. This
/// is used to allocate a new raster when calling
/// `FT_Set_Raster'.
///
/// format    :: the source glyph image format this raster is able to
/// handle.
///
/// init      :: the raster's initialisation routine
///
/// set_mode  :: the raster's mode set routine
///
/// render    :: the raster's rendering routine
final class FT_Raster_Interface_ extends ffi.Struct {
  @ffi.Long()
  external int size;

  @ffi.Int32()
  external int format_tag;

  external FT_Raster_Init_Proc init;

  external FT_Raster_Set_Mode_Proc set_mode;

  external FT_Raster_Render_Proc render;
}

/// /
typedef FT_Raster_Init_Proc
    = ffi.Pointer<ffi.NativeFunction<FT_Raster_Init_ProcFunction>>;
typedef FT_Raster_Init_ProcFunction = ffi.Int Function(
    FT_Raster raster, ffi.Pointer<ffi.Char> pool_base, ffi.Long pool_size);
typedef DartFT_Raster_Init_ProcFunction = int Function(
    FT_Raster raster, ffi.Pointer<ffi.Char> pool_base, int pool_size);

/// /
typedef FT_Raster = ffi.Pointer<FT_RasterRec_>;

/// /
typedef FT_Raster_Set_Mode_Proc
    = ffi.Pointer<ffi.NativeFunction<FT_Raster_Set_Mode_ProcFunction>>;
typedef FT_Raster_Set_Mode_ProcFunction = ffi.Int Function(
    FT_Raster raster, ffi.Pointer<ffi.Char> mode, ffi.Pointer<ffi.Char> args);
typedef DartFT_Raster_Set_Mode_ProcFunction = int Function(
    FT_Raster raster, ffi.Pointer<ffi.Char> mode, ffi.Pointer<ffi.Char> args);

/// <FuncType>
/// FT_Raster_Render_Proc
///
/// <Description>
/// Renders an outline into a target bitmap/pixmap.
///
/// <Input>
/// raster        :: A handle to a raster object used during rendering.
///
/// source_image  :: a typeless pointer to the source glyph image.
/// (usually a FT_Outline*).
///
/// target_bitmap :: descriptor to the target bitmap.
///
/// <Return>
/// Error code, interpreted as a FT_Error by FreeType library.
/// 0 means success.
typedef FT_Raster_Render_Proc
    = ffi.Pointer<ffi.NativeFunction<FT_Raster_Render_ProcFunction>>;
typedef FT_Raster_Render_ProcFunction = ffi.Int Function(FT_Raster raster,
    ffi.Pointer<ffi.Void> source_image, ffi.Pointer<FT_Bitmap> target_bitmap);
typedef DartFT_Raster_Render_ProcFunction = int Function(FT_Raster raster,
    ffi.Pointer<ffi.Void> source_image, ffi.Pointer<FT_Bitmap> target_bitmap);

/// <Struct>
/// FT_Bitmap
///
/// <Description>
/// A structure used to describe a bitmap or pixmap to the raster.
/// Note that we now manage pixmaps of various depths through the
/// `pixel_mode' field.
///
/// <Fields>
/// rows         :: The number of bitmap rows.
///
/// width        :: The number of pixels in bitmap row.
///
/// pitch        :: The pitch's absolute value is the number of bytes
/// taken by one bitmap row, including padding. However,
/// the pitch is positive when the bitmap has a `down'
/// flow, and negative when it has an `up' flow. In all
/// cases, the pitch is an offset to add to a bitmap
/// pointer in order to go down one row.
///
/// buffer       :: A typeless pointer to the bitmap buffer. This value
/// should be aligned on 32-bit boundaries in most cases.
///
/// num_grays    :: this field is only used with ft_pixel_mode_grays,
/// it gives the number of gray levels used in the
/// bitmap.
///
/// pixel_mode   :: the pixel_mode, i.e. how pixel bits are stored
///
/// palette_mode :: this field is only used with paletted pixel modes,
/// it indicates how the palette is stored
///
/// palette      :: a typeless pointer to the bitmap palette. only used
/// for paletted pixel modes.
///
/// <Note>
/// When using pixel modes pal2, pal4 and pal8 with a void `palette'
/// field, a gray pixmap with respectively 4, 16 and 256 levels of gray
/// is assumed. This, in order to be compatible with some embedded bitmap
/// formats defined in the TrueType spec.
///
/// Note that no font was found presenting such embedded bitmaps, so this
/// is currently completely unhandled by the library.
typedef FT_Bitmap = FT_Bitmap_;

/// /
final class FT_UnitVector_ extends ffi.Struct {
  @FT_F2Dot14()
  external int x;

  @FT_F2Dot14()
  external int y;
}

/// /
typedef FT_F2Dot14 = ffi.Short;
typedef DartFT_F2Dot14 = int;

final class FT_Matrix_ extends ffi.Struct {
  @FT_Fixed()
  external int xx;

  @FT_Fixed()
  external int xy;

  @FT_Fixed()
  external int yx;

  @FT_Fixed()
  external int yy;
}

/// /
typedef FT_Fixed = ffi.Long;
typedef DartFT_Fixed = int;

/// /
final class FT_BBox_ extends ffi.Struct {
  @FT_Pos()
  external int xMin;

  @FT_Pos()
  external int yMin;

  @FT_Pos()
  external int xMax;

  @FT_Pos()
  external int yMax;
}

/// /
final class FT_ListNodeRec_ extends ffi.Struct {
  external FT_ListNode prev;

  external FT_ListNode next;

  external ffi.Pointer<ffi.Void> data;
}

/// /
/// /*************************************************************************/
/// /
typedef FT_ListNode = ffi.Pointer<FT_ListNodeRec_>;

/// /
final class FT_ListRec_ extends ffi.Struct {
  external FT_ListNode head;

  external FT_ListNode tail;
}

/// /
/// /*************************************************************************/
/// /
final class FT_Glyph_Metrics_ extends ffi.Struct {
  @FT_Pos()
  external int width;

  @FT_Pos()
  external int height;

  @FT_Pos()
  external int horiBearingX;

  @FT_Pos()
  external int horiBearingY;

  @FT_Pos()
  external int horiAdvance;

  @FT_Pos()
  external int vertBearingX;

  @FT_Pos()
  external int vertBearingY;

  @FT_Pos()
  external int vertAdvance;
}

/// /
final class FT_Generic_ extends ffi.Struct {
  external ffi.Pointer<ffi.Void> data;

  external FT_Generic_Finalizer finalizer;
}

/// /
typedef FT_Generic_Finalizer
    = ffi.Pointer<ffi.NativeFunction<FT_Generic_FinalizerFunction>>;
typedef FT_Generic_FinalizerFunction = ffi.Void Function(
    ffi.Pointer<ffi.Void> object);
typedef DartFT_Generic_FinalizerFunction = void Function(
    ffi.Pointer<ffi.Void> object);

/// /
final class FT_Bitmap_Size_ extends ffi.Struct {
  @FT_Short()
  external int height;

  @FT_Short()
  external int width;
}

/// /
typedef FT_Short = ffi.Short;
typedef DartFT_Short = int;

final class FT_LibraryRec_ extends ffi.Opaque {}

final class FT_DriverRec_ extends ffi.Opaque {}

final class FT_FaceRec_ extends ffi.Struct {
  external FT_Driver driver;

  external FT_Memory memory;

  external FT_Stream stream;

  @FT_Long()
  external int num_faces;

  @FT_Long()
  external int face_index;

  external FT_Generic generic;

  external FT_GlyphSlot glyph;

  external FT_Size size;

  external FT_CharMap charmap;

  @FT_Int()
  external int num_charmaps;

  external ffi.Pointer<FT_CharMap> charmaps;

  external FT_ListRec sizes_list;

  external ffi.Pointer<ffi.Void> extensions;

  @FT_Long()
  external int face_flags;

  @FT_Long()
  external int style_flags;

  @FT_Long()
  external int num_glyphs;

  external ffi.Pointer<FT_String> family_name;

  external ffi.Pointer<FT_String> style_name;

  @FT_Int()
  external int num_fixed_sizes;

  external ffi.Pointer<FT_Bitmap_Size> available_sizes;

  external FT_BBox bbox;

  @FT_UShort()
  external int units_per_EM;

  @FT_Short()
  external int ascender;

  @FT_Short()
  external int descender;

  @FT_Short()
  external int height;

  @FT_Short()
  external int max_advance_width;

  @FT_Short()
  external int max_advance_height;

  @FT_Short()
  external int underline_position;

  @FT_Short()
  external int underline_thickness;

  @FT_UShort()
  external int max_points;

  @FT_Short()
  external int max_contours;
}

/// /
typedef FT_Driver = ffi.Pointer<FT_DriverRec_>;

/// /
typedef FT_Long = ffi.Long;
typedef DartFT_Long = int;

/// /
typedef FT_Generic = FT_Generic_;

/// /
typedef FT_GlyphSlot = ffi.Pointer<FT_GlyphSlotRec_>;

/// /
final class FT_GlyphSlotRec_ extends ffi.Struct {
  external FT_Face face;

  external FT_GlyphSlot1 next;

  external FT_Glyph_Metrics metrics;

  external FT_Glyph_Metrics metrics2;

  @ffi.Int32()
  external int format;

  external FT_Bitmap bitmap;

  external FT_Outline outline;

  @FT_Int()
  external int num_subglyphs;

  @FT_Int()
  external int max_subglyphs;

  external ffi.Pointer<FT_SubGlyph> subglyphs;

  external ffi.Pointer<ffi.Void> control_data;

  external ffi.Pointer<ffi.Void> control_len;

  external ffi.Pointer<ffi.Void> other;
}

/// /
typedef FT_Face = ffi.Pointer<FT_FaceRec_>;

/// /
typedef FT_GlyphSlot1 = ffi.Pointer<FT_GlyphSlotRec_>;

/// /
/// /*************************************************************************/
/// /
typedef FT_Glyph_Metrics = FT_Glyph_Metrics_;
typedef FT_Outline = FT_Outline_;

/// /
typedef FT_Int = ffi.Int;
typedef DartFT_Int = int;
typedef FT_SubGlyph = FT_SubGlyph_;

final class FT_SubGlyph_ extends ffi.Struct {
  @FT_Int()
  external int index;

  external ffi.Pointer<FT_Byte> control_data;

  @FT_Int()
  external int control_len;

  @FT_UShort()
  external int flags;

  @FT_Int()
  external int arg1;

  @FT_Int()
  external int arg2;

  external FT_Matrix transform;

  external ffi.Pointer<FT_SubGlyph1> parent;
}

/// /
typedef FT_Byte = ffi.UnsignedChar;
typedef DartFT_Byte = int;

/// /
typedef FT_UShort = ffi.UnsignedShort;
typedef DartFT_UShort = int;
typedef FT_Matrix = FT_Matrix_;
typedef FT_SubGlyph1 = FT_SubGlyph_;

/// /
typedef FT_Size = ffi.Pointer<FT_SizeRec_>;

/// /
final class FT_SizeRec_ extends ffi.Struct {
  external FT_Face face;

  external FT_Generic generic;

  external FT_Size_Metrics metrics;
}

/// /
typedef FT_Size_Metrics = FT_Size_Metrics_;

/// /
final class FT_Size_Metrics_ extends ffi.Struct {
  @FT_UShort()
  external int x_ppem;

  @FT_UShort()
  external int y_ppem;

  @FT_Fixed()
  external int x_scale;

  @FT_Fixed()
  external int y_scale;

  @FT_Pos()
  external int ascender;

  @FT_Pos()
  external int descender;

  @FT_Pos()
  external int height;

  @FT_Pos()
  external int max_advance;
}

/// /
typedef FT_CharMap = ffi.Pointer<FT_CharMapRec_>;

/// /
final class FT_CharMapRec_ extends ffi.Struct {
  external FT_Face face;

  @ffi.Int32()
  external int encoding;

  @FT_UShort()
  external int platform_id;

  @FT_UShort()
  external int encoding_id;
}

/// /
abstract class FT_Encoding_ {
  static const int ft_encoding_none = 0;
  static const int ft_encoding_symbol = 0;
  static const int ft_encoding_unicode = 1970170211;
  static const int ft_encoding_latin_2 = 1818326066;
  static const int ft_encoding_sjis = 1936353651;
  static const int ft_encoding_big5 = 1651074869;
  static const int ft_encoding_adobe_standard = 1633972066;
  static const int ft_encoding_adobe_expert = 1633968741;
  static const int ft_encoding_apple_roman = 1634889070;
}

/// /
typedef FT_ListRec = FT_ListRec_;

/// /
typedef FT_String = ffi.Char;
typedef DartFT_String = int;

/// /
typedef FT_Bitmap_Size = FT_Bitmap_Size_;

/// /
typedef FT_BBox = FT_BBox_;

/// /
typedef FT_Error = ffi.Int;
typedef DartFT_Error = int;
typedef FT_Library = ffi.Pointer<FT_LibraryRec_>;

/// /
typedef FT_F26Dot6 = ffi.Long;
typedef DartFT_F26Dot6 = int;

/// /
typedef FT_UInt = ffi.UnsignedInt;
typedef DartFT_UInt = int;

/// /
typedef FT_ULong = ffi.UnsignedLong;
typedef DartFT_ULong = int;

/// /
typedef FT_Outline_Funcs = FT_Outline_Funcs_;
